@startuml

title __IMPL's Class Diagram__\n

  namespace survival2d {
    namespace service {
      namespace impl {
        class survival2d.service.impl.FindMatchServiceImpl {
            {static} - log : Logger
            - matchingTeams : Set<Integer>
            + cancelFindMatch()
            + findMatch()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace service {
      namespace impl {
        class survival2d.service.impl.LobbyTeamServiceImpl {
            {static} - currentTeamId : AtomicInteger
            - teamIdToTeam : Map<Integer, LobbyTeam>
            - usernameToTeam : Map<String, Integer>
            + createTeam()
            + getTeam()
            + getTeamOfPlayer()
            + joinTeam()
            + quitTeam()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace service {
      namespace impl {
        class survival2d.service.impl.MatchingServiceImpl {
            - currentMatchId : AtomicInteger
            {static} - log : Logger
            - matchIdToMatch : Map<Integer, Match>
            - playerIdToMatchId : Map<String, Integer>
            + createMatch()
            + destroyMatch()
            + getMatchById()
            + getMatchIdOfPlayer()
            + getMatchOfPlayer()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace service {
      namespace impl {
        class survival2d.service.impl.MaxIdServiceImpl {
            - maxIdRepository : EzyMaxIdRepository
            + incrementAndGet()
            + incrementAndGet()
            + loadAll()
            + setMaxIdRepository()
        }
      }
    }
  }
  

  survival2d.service.impl.FindMatchServiceImpl .up.|> survival2d.service.FindMatchService
  survival2d.service.impl.FindMatchServiceImpl o-- survival2d.service.MatchingService : matchingService
  survival2d.service.impl.LobbyTeamServiceImpl .up.|> survival2d.service.LobbyTeamService
  survival2d.service.impl.MatchingServiceImpl .up.|> survival2d.service.MatchingService
  survival2d.service.impl.MatchingServiceImpl o-- survival2d.service.LobbyTeamService : teamService
  survival2d.service.impl.MaxIdServiceImpl .up.|> survival2d.service.MaxIdService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
